<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_gravity="bottom"
    android:gravity="bottom">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="240dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/formula_textview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:gravity="end|bottom"
                android:textColor="@color/formula_text_color"
                android:textSize="35sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/answer_formula"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="end|bottom"
                android:text="-2000"
                android:textColor="@color/answer_text_color"
                android:textSize="60sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/all_clear_button"
                    style="@style/operator_button_style"
                    app:cornerRadius="25dp"
                    android:text="@string/clear_button_text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bracket_button"
                    style="@style/operator_button_style"
                    android:contentDescription="@string/brakets"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/brackets_icon"
                    app:iconSize="35dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/percent_button"
                    style="@style/operator_button_style"
                    android:contentDescription="@string/percent"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/percent_icon"
                    app:iconSize="40dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pi"
                    style="@style/operator_button_style"
                    android:contentDescription="@string/pi_number"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/pi_icon" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clear_button"
                    style="@style/operator_button_style"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/clear_icon"
                    app:iconSize="40dp"
                    android:contentDescription="@string/clear_button_hint"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/power_button"
                    style="@style/operator_button_style"
                    android:contentDescription="@string/contentDescription_power_button"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/power_icon"
                    app:iconSize="45dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/square_root_button"
                    style="@style/operator_button_style"
                    android:contentDescription="@string/contentDescription_square_root_button"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/square_root_icon"
                    app:iconSize="40dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/divide_button"
                    style="@style/operator_button_style"
                    android:contentDescription="@string/contentDescription_divide_button"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/divide_icon" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/number7_button"
                    style="@style/number_button_style"
                    app:cornerRadius="25dp"
                    android:text="@string/number_7_button" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/number8_button"
                    style="@style/number_button_style"
                    app:cornerRadius="25dp"
                    android:text="@string/number_8_button" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/number9_button"
                    style="@style/number_button_style"
                    app:cornerRadius="25dp"
                    android:text="@string/number_9_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/multiply_button"
                    style="@style/operator_button_style"
                    android:contentDescription="@string/contentDescription_multiply_button"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/multiply_icon" />



            </androidx.appcompat.widget.LinearLayoutCompat>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/number4_button"
                    style="@style/number_button_style"
                    app:cornerRadius="25dp"
                    android:text="@string/number_4_button"
                    android:contentDescription="@string/number_4_button"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/number5_button"
                    style="@style/number_button_style"
                    app:cornerRadius="25dp"
                    android:text="@string/number_5_button" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/number6_button"
                    style="@style/number_button_style"
                    app:cornerRadius="25dp"
                    android:text="@string/number_6_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/minus_button"
                    style="@style/operator_button_style"
                    android:contentDescription="@string/contentDescription_minus_button"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/minus_icon" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/number1_button"
                    style="@style/number_button_style"
                    app:cornerRadius="25dp"
                    android:text="@string/number_1_button" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/number2_button"
                    style="@style/number_button_style"
                    app:cornerRadius="25dp"
                    android:text="@string/number_2_button" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/number3_button"
                    style="@style/number_button_style"
                    app:cornerRadius="25dp"
                    android:text="@string/number_3_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/plus_button"
                    style="@style/operator_button_style"
                    android:contentDescription="@string/contentDescription_plus_button"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/plus_icon" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_button"
                    style="@style/number_button_style"
                    android:contentDescription="@string/contentDescription_sign_button"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/sign_icon" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/number0_button"
                    style="@style/number_button_style"
                    app:cornerRadius="25dp"
                    android:text="@string/number_0_button" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dote_button"
                    style="@style/number_button_style"
                    app:cornerRadius="25dp"
                    android:text="@string/dote_button"
                    android:textSize="50sp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/equal_button"
                    style="@style/operator_button_style"
                    android:contentDescription="@string/contentDescription_equal_button"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/equal_icon" />


            </LinearLayout>





        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>